# eif

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trustlint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_PROCESSING_AGREEMENT.md  DECISIONS.md  Dockerfile  LEGAL.md  NOTICE  PRIVACY_POLICY.md  README.md  SECURITY.md  TERMS_OF_SERVICE.md  index.html  pyproject.toml  server.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
deploy/: do_app_spec.yaml
docs/: architecture.md  compliance.md  eif_causal_gate_v4_tech_spec.md  eif_s17_s18_s19_tech_spec.md  eif_v2_tech_spec.md  research_foundation.md
docs/integrations/: CLAUDE_CODE.md  CLAUDE_DESKTOP.md  COMPLYEDGE.md  CURSOR.md  README.md
eif/: __init__.py  auto.py  eif_engine_intent.yaml  eif_v2_intent.yaml  eif_v3_intent.yaml  schemas.py  session.py
eif/calibrate/: __init__.py  bayesian.py  conformal.py  domain_constraints.py  ece.py  prior_strategy.py  trust.py
eif/causal_gate/: __init__.py  confound.py  direction.py  eif_causal_gate_v4_intent.yaml  evidence_probe.py  intervention.py  iris_pipeline.py  verdict.py
eif/challenge/: __init__.py  diversity.py  eif_multi_critic_intent.yaml  multi_critic.py  protocol.py  replicator.py
eif/cost_model/: __init__.py  catch_rate_empirical.py  cost_ledger.py  eif_catchrate_intent.yaml
eif/declare/: __init__.py  extractor.py  harking_guard.py  registry.py
eif/explain/: __init__.py  artifact.py  eif_explain_coldstart_intent.yaml  hard_to_vary.py  reach.py
eif/falsify/: __init__.py  condition.py  eif_evidence_collection_intent.yaml  eif_native_tools_intent.yaml  eif_v5_evidence_trust_weighting_intent.yaml  evidence_collector.py  hard_to_vary.py  native_tools.py  sprt.py  trivial_check.py
eif/hypothesis_agenda/: __init__.py  agenda.py  eif_hypothesis_agenda_intent.yaml  fdr.py  scorer.py
eif/input_guard/: __init__.py  detector.py  eif_input_guard_intent.yaml
eif/integration/: __init__.py  eif_auto.py  interceptor.py
examples/: quickstart.py
research/: README.md  sycophancy_bias_research.md
tests/: __init__.py  conftest.py
validation/: CORPUS_REPORT.md  EIF_INVESTMENT_V31_EVIDENCE.md
(+94 files in other folders)
